[tool.poetry]
name = "c22attention"
version = "0.1.0"
description = ""
authors = ["Augusto Nunes <nunes.augusto19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch = "^1.0.2"
pycatch22 = "^0.4.4"
pandas = "^2.1.3"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
